--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
   "require": {
     "php": ">=7.0"
   },
+  "config": {
+    "preferred-install": {
+      "*": "dist"
+    }
+  },
   "autoload": {
     "psr-4": {
       "Rafanake\\": "src/"
