--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
   "name": "rafanake/fpdf",
-  "description": "FPDF Wrapper",
+  "homepage": "http://www.fpdf.org",
+  "description": "FPDF is a PHP class which allows to generate PDF files with pure PHP. F from FPDF stands for Free: you may use it for any kind of usage and modify it to suit your needs.",
   "type": "library",
+  "keywords": ["php", ,"pdf", "fpdf"],
+  "license": "MIT",
   "authors": [
     {
       "name": "Rafael Fiori",
